# purchase-workflow

./: README.md
purchase_analytic_global/: README.rst  __manifest__.py
purchase_analytic_global/models/: purchase.py
purchase_analytic_global/readme/: CONTRIBUTORS.md  CREDITS.md  DESCRIPTION.md
purchase_analytic_global/tests/: test_purchase_analytic_global.py
purchase_analytic_global/views/: purchase.xml
purchase_commercial_partner/: README.rst
purchase_commercial_partner/i18n/: purchase_commercial_partner.pot
purchase_exception/: README.rst  __manifest__.py
purchase_exception/data/: purchase_exception_data.xml
purchase_exception/views/: purchase_view.xml
purchase_last_price_info/: README.rst
purchase_last_price_info/i18n/: hr.po  hr_HR.po  it.po  purchase_last_price_info.pot  ru.po  sl.po
purchase_order_line_menu/: README.rst
purchase_order_line_menu/i18n/: purchase_order_line_menu.pot
purchase_order_line_menu/views/: purchase_order_line_views.xml
purchase_order_type/: README.rst  __manifest__.py
purchase_order_type/i18n/: am.po  ar.po  bg.po  bs.po  ca.po  ca_ES.po  cs.po  da.po  de.po  el_GR.po  en_GB.po  es.po  es_AR.po  es_CL.po  es_CO.po  es_CR.po  es_DO.po  es_EC.po  es_ES.po  es_MX.po  es_PE.po  es_PY.po  es_VE.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  fr_CH.po  fr_FR.po  gl.po  gl_ES.po  he.po  hr.po  hr_HR.po  hu.po  id.po  it.po  ja.po  (+31 more)
purchase_request/: README.rst
purchase_request/i18n/: am.po  ar.po  bg.po  bs.po  ca.po  (+67 more)
purchase_request_department/: README.rst  __manifest__.py
setup/_metapackage/: pyproject.toml
(+15 files in other folders)
